# namespace

./: README.md  pyproject.toml
namespace/: __init__.py
